finalized about me section formatting

--- a/index.html
+++ b/index.html
@@ -38,16 +38,14 @@
         <div class="jumbotron jumbotron-fluid mt-4 aboutme">
             <div class="row">
                 <div class="col-6">
-                    <img width="100%" height="auto" class="ml-3">
+                    <img width="100%" height="auto" class="ml-3" src="https://upload.wikimedia.org/wikipedia/en/9/9a/Trollface_non-free.png">
                 </div>
-                <div class="col-6">
+                <div class="col-6 d-flex justify-content-center align-items-center pl-4">
                     <p class="introText pr-3">
                         Hello, my name is Atif Shaikh. I am an aspiring web developer.
                     </p>
                 </div>
-            </div>
-            
-     
+            </div> 
         </div>
     </div>
 
