added formatting for rest of the section

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <a class="nav-link" href="#">About Me</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#">Projects</a>
+                <a class="nav-link" href="#projectsSection">Projects</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#">Contact Me</a>
+                <a class="nav-link" href="#contactSection">Contact Me</a>
             </li>
             </ul>
         </div>
@@ -38,7 +38,7 @@
         <div class="jumbotron jumbotron-fluid mt-4 aboutme">
             <div class="row">
                 <div class="col-6">
-                    <img width="100%" height="auto" class="ml-3" src="https://upload.wikimedia.org/wikipedia/en/9/9a/Trollface_non-free.png">
+                    <img width="100%" height="auto" class="ml-3" src="./img/images.png">
                 </div>
                 <div class="col-6 d-flex justify-content-center align-items-center pl-4">
                     <p class="introText pr-3">
@@ -46,6 +46,46 @@
                     </p>
                 </div>
             </div> 
+        </div>
+
+        <div class="jumbotron jumbotron-fluid mt-4">
+            <div class="d-flex justify-content-center align-items-center">
+                <h1 class="sectionTitle" id="projectsSection">Projects</h1>
+            </div>
+
+            <div class="row d-flex justify-content-center align-items-center mt-5">
+                <div class="card mx-4 mb-5" style="width: 18rem;">
+                    <img class="card-img-top" src="./img/weatherShot.png" alt="Card image cap"> 
+                    <div class="card-body">
+                      <h5 class="card-title">Customizable Weather Dashboard</h5>
+                      <p class="card-text">A website that allows you so see current weather and 5 day forcasts for cities and customize your personal dashboard.</p>
+                      <a href="https://atifashaikh.github.io/weather_website/" class="btn btn-primary">Live Website</a>
+                      <a href="https://github.com/AtifAShaikh/weather_website" class="btn btn-primary">Github</a>
+                    </div>
+                  </div>
+                  <div class="card mx-4 mb-5" style="width: 18rem;">
+                    <img class="card-img-top" src="./img/foodForDayzShot.png" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Food for Dayz</h5>
+                      <p class="card-text">A website that uses food apis so that you can research and create diets to keep track of your total calories and macronutrients.</p>
+                      <a href="https://atifashaikh.github.io/FoodForDays/" class="btn btn-primary">Live Website</a>
+                      <a href="https://github.com/AtifAShaikh/FoodForDays" class="btn btn-primary">Github</a>
+                    </div>
+                  </div>
+            </div>
+        </div>
+
+        <div class="jumbotron jumbotron-fluid mt-4">
+            <div class="d-flex justify-content-center align-items-center">
+                <h1 class="sectionTitle" id="contactSection">Contact Me</h1>
+            </div>
+            <div class="d-flex justify-content-center align-items-center flex-column mt-3">
+                <a href="#" class="contact-item">Phone: 310-755-5217</a>
+                <a href="#" class="contact-item">Email: atifsha05@gmail.com</a>
+                <a href="#" class="contact-item">Linkedin</a>
+                <a href="#" class="contact-item">Github</a>
+            </div>
+
         </div>
     </div>
 
